--- a/client/src/components/Welcome/Welcome.scss
+++ b/client/src/components/Welcome/Welcome.scss
@@ -1,23 +1,23 @@
 .wrapper__welcome {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  h1 {
-    color: #7f00ff;
-  }
-
-  /* .welcome__headers {
-    align-self: flex-start;
-  } */
-
-  .welcome__buttons {
+    width: 100vw;
+    height: 100vh;
     display: flex;
-  justify-content: space-between;
-  align-items: space-between;
-  min-width: 280px;
-  }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        color: #7f00ff;
+    }
+
+    .header__welcome {
+        margin: 1rem 1rem;
+    }
+
+    .welcome__buttons {
+        display: flex;
+        justify-content: space-between;
+        align-items: space-between;
+        min-width: 280px;
+    }
 }
